--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,12 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.2.5'
+    archLifecycleVersion = '2.2.0'
+    coreTestingVersion = '2.1.0'
+    materialVersion = '1.1.0'
+    jacksonVersion = '2.10.3'
+    coroutines = '1.3.4'
+}
