--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="eu.tilk.cdlcplayer">
+    package="eu.tilk.cdlcplayer"
+    android:versionCode="1"
+    android:versionName="@string/version">
 
     <uses-feature
         android:glEsVersion="0x00030001"
