--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,12 @@ android {
         applicationId "eu.tilk.cdlcplayer"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    applicationVariants.all { variant ->
+        variant.resValue "string", "version", variant.versionName
     }
     buildTypes {
         release {
