--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
+    kotlinOptions.useIR = true
     defaultConfig {
         applicationId "eu.tilk.cdlcplayer"
         minSdkVersion 21
