--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,11 +36,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="eu.tilk.cdlcplayer.SongListActivity" />
         </activity>
-        <activity android:name=".SongListActivity">
+        <activity android:name=".SongListActivity" android:launchMode="singleTop">
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
     </application>
