--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    ext.kotlin_version = '1.5.21'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -35,7 +35,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         
     }
 }
@@ -45,10 +45,10 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.6'
+    roomVersion = '2.3.0'
     archLifecycleVersion = '2.2.0'
     coreTestingVersion = '2.1.0'
-    materialVersion = '1.3.0'
+    materialVersion = '1.4.0'
     jacksonVersion = '2.10.3'
     coroutines = '1.4.1'
 }
