Update versions, bump to version 4

--- a/build.gradle
+++ b/build.gradle
@@ -50,5 +50,5 @@ ext {
     coreTestingVersion = '2.1.0'
     materialVersion = '1.4.0'
     jacksonVersion = '2.10.3'
-    coroutines = '1.4.1'
+    coroutines = '1.5.1-native-mt'
 }
