--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     buildToolsVersion '30.0.2'
     kotlinOptions.useIR = true
     kotlinOptions.jvmTarget = "1.8"
     defaultConfig {
         applicationId "eu.tilk.cdlcplayer"
-        minSdkVersion 21
-        targetSdkVersion 30
+        minSdkVersion 23
+        targetSdkVersion 33
         versionCode 6
         versionName "0.0.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -74,6 +74,10 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$rootProject.jacksonVersion"
     implementation 'javax.xml.stream:stax-api:1.0-2'
     implementation 'net.sf.loggersoft.kotlin:binary-streams:0.35'
+    implementation "androidx.media3:media3-exoplayer:1.0.0"
+    implementation "androidx.media3:media3-exoplayer-dash:1.0.0"
+    implementation "androidx.media3:media3-ui:1.0.0"
+
 
     // Material design
     implementation "com.google.android.material:material:$rootProject.materialVersion"
