Add audio support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
         }
     }
     packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.md'
