--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/TarsosDSP-Android-2.4-bin.jar')
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
@@ -76,7 +77,6 @@ dependencies {
     implementation 'javax.xml.stream:stax-api:1.0-2'
     implementation 'net.sf.loggersoft.kotlin:binary-streams:0.35'
     implementation "androidx.media3:media3-exoplayer:1.0.0"
-
 
     // Material design
     implementation "com.google.android.material:material:$rootProject.materialVersion"
